[package]
name = "clientV2"
version = "0.1.0"
authors = ["SBindra <sbindra70@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-fsm = { path = "../../lib/fsm" }
getset = { path = "../../lib/getset" }
# mqtt-sn-lib = { path="../../lib/mqtt-sn-lib"}
broker-lib = { path="../../lib/broker-lib"}
# DTLS = {path = "../../lib/DTLS"}

custom_debug = "0.5.0"
modular-bitfield = "0.11.2"
tokio = { version = "1.0.0", features = ["full", "tracing"] }
tokio-util = { version = "0.6.3", features = ["full"] }
tokio-stream = { version = "0.1" }
bytes = "1.1.0"
futures = { version = "0.3.0", features = ["thread-pool"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
bincode = "1.0"
time = "0.1"
simplelog = "0.10"
log = { version = "0.4.*", features = ["std"] }
num = "0.4"
num-traits = "0.2"
num-derive = "0.3"
arrayref = "0.3.6"
strum = "0.20"
strum_macros = "0.20"
num_enum = "0.5.1"
sled = "0.34"
getopts = "~0.2.14"
socket2 = "0.3"
clap = "2.33"
nanoid = "0.4.0"
ferris = "0.1"
mio = "0.7"
arr_macro = "0.1.3"

trace-var = { path = "../../lib/trace-var" }
chrono = "0.4"
crossbeam = "0.8.1"
crossbeam-queue = "0.3.4"
crossbeam-utils = "0.8.7"
varmint = "0.1.3"
