[package]
name = "broker-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tikv-client = "0.1.0"
rust-fsm = { path="../fsm" }
getset = { path="../getset" }
# mqtt-sn-lib = { path="../mqtt-sn-lib"}
custom_debug = { path="../custom_debug" }
modular-bitfield = { path="../modular-bitfield" }
tokio-util = { version="0.6.3", features=["full"] }
tokio-stream = { version="0.1" }
bytes = "1.1.0"
serde = { version="1.0", features=["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
bincode = { path="../bincode-trunk" }
time = "0.3.7"
#simplelog = { path="../simplelog" }
log = { version="0.4.*", features=["std"] }
num-traits = { path="../num-traits" }
num-derive = { path="../num-derive" }
arrayref = "0.3.6"
# strum = "0.20"
# strum_macros = "0.20"
num_enum = "0.5.1"
sled = "0.34"
getopts = "~0.2.14"
socket2 = "0.3"
clap = "2.33"
thiserror = "1.0"
crossbeam = "0.8.1"

trace-var = {path = "../../lib/trace-var" }
chrono = "0.4.19"
crossbeam-utils = "0.8.7"

backtrace = "0.3.64"
#trace_caller_macro = { version = "0.1.0", path = "../trace_caller/trace_caller_macro" }
#trace_caller = { version = "0.2.0", path = "../trace_caller" }
#trace_caller_macro = { version = "0.1.0", path = "/mnt/OneTB/repos/trace_caller/trace_caller_macro" }
#trace_caller = { version = "0.2.0", path = "/mnt/OneTB/repos/trace_caller" }
trace_caller_macro = { version = "0.1.0", path = "../../../../trace_caller/trace_caller_macro" }
trace_caller = { version = "0.2.0", path = "../../../../trace_caller" }

uuid = { version = "0.8", features = ["serde", "v1", "v4"] }
rand = "0.8.5"
lazy_static = "1.4.0"
hashbrown = "0.12.0"
bisetmap = "0.1.6"

webrtc-dtls = {path = "../../../dtls-exofense"}
util = { package = "webrtc-util", version = "0.5.0", default-features = false, features = [ "conn" ] }
# tikv-client = {path = "/mnt/OneTB/rust/tikv/client_rust_master" }      
# async-trait = "0.1"
# derive-new = "0.5"
# either = "1.6"
# fail = "0.4"
# futures = { version = "0.3", features = ["async-await", "thread-pool"] }
# futures-timer = "3.0"
# grpcio = { version = "0.9", features = [ "secure", "prost-codec", "use-bindgen", "openssl-vendored" ], default-features = false }
# prometheus = { version = "0.12", features = [ "push", "process" ], default-features = false }
# regex = "1"
# semver = "0.11"
# slog = { version = "2.3", features = ["max_level_trace", "release_max_level_debug"] }
# slog-term = { version = "2.4" }
tokio = { version = "1.7.0", features = ["full", "tracing", "sync", "rt-multi-thread", "macros" ] }
async-recursion = "0.3"
# mongodb = "2.2.2"

