[package]
name = "exofense-dtls"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

bytes = "1.1.0"
byteorder = "1.3.2"
lazy_static = "1.4.0"
rand_core = "0.5"
elliptic-curve = { version = "0.8.4", features = [
    "default",
    "ecdh",
    "zeroize",
] }
p256 = { version = "0.7.1", features = ["default", "ecdh", "zeroize", "ecdsa"] }
#p384 = "0.4.1"
rand = "0.8.0"
hmac = "0.10.1"
sha-1 = "0.9.1"
sha2 = "0.9.1"
aes = "0.6.0"
block-modes = "0.7.0"
aes-gcm = "0.8.0"
ccm = "0.3.0"
tokio = { version = "1.12.0", features = ["full"] }
async-trait = "0.1.51"
x25519-dalek = "1.1.0"
signature = "1.2.2"
oid-registry = "0.1.1"
x509-parser = "0.9"
der-parser = "5.0"
rcgen = "0.8.13"
ring = "0.16.19"
webpki = "0.21.4"
rustls = { version = "0.19.0", features = ["dangerous_configuration"] }
bincode = "1.3.1"
serde = "1.0"
serde_derive = "1.0"
log = "0.4"
thiserror = "1.0.29"
anyhow = "1.0.44"
sled = "0.34"
mio = "0.7.13"
subtle = "2.4.1"
nix = "0.22"

[build-dependencies]
cc = "1.0.70"

[dev-dependencies]
tokio-test = "0.4.2"
env_logger = "0.9.0"
chrono = "0.4.19"
clap = "2"
hub = { path = "examples/hub" }

[[example]]
name = "dial_psk"
path = "examples/dial/psk/dial_psk.rs"
bench = false

[[example]]
name = "dial_selfsign"
path = "examples/dial/selfsign/dial_selfsign.rs"
bench = false

[[example]]
name = "dial_verify"
path = "examples/dial/verify/dial_verify.rs"
bench = false

[[example]]
name = "listen_psk"
path = "examples/listen/psk/listen_psk.rs"
bench = false

[[example]]
name = "listen_selfsign"
path = "examples/listen/selfsign/listen_selfsign.rs"
bench = false

[[example]]
name = "listen_verify"
path = "examples/listen/verify/listen_verify.rs"
bench = false
